selfhost/tests/neg/tailret.ail
// EXPECT: returning str but function returns i64
fn f() -> i64 { "hi" }
println(f())
